--- a/_materials/springboot/index.html
+++ b/_materials/springboot/index.html
@@ -964,7 +964,7 @@ INSERT INTO movie_genre VALUES
     </shell>
 
 
-    <p>Per últim caldrà decidir a quins endpoints caldrà estar autenticat per a accedir i quins no. Per exemple, podem donar accés al registre però 
+    <p>Per últim caldrà decidir a quins <em>endpoints</em> caldrà estar autenticat per a accedir i quins no. Per exemple, podem donar accés al registre però 
         requerir autenticació per a tot lo demés:
     </p>
 
