--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -61,6 +61,7 @@
                             <li><p>Los campos <w>ancho</w> y <w>alto</w> siempre son mayores que 0.</p></li>
                             <li><p>El campo <w>ancho</w> siempre es mayor o igual a la longitud del campo <w>texto</w></p></li>
                             <li><p>El campo <w>alto</w> es mayor o igual <w>1</w> si el campo <w>texto</w> no está vacío.</p></li>
+                            <li><p>El campo <w>texto</w> nunca debe ser <sc java>null</sc>.</p></li>
                         </ul>
                     </li>
                 </ul>
