--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><p>Añade a la clase dos campos de tipo <sc java>int</sc>: <w>ancho</w> y <w>alto</w>. Y otro de tipo <sc java>String</sc>: <w>texto</w></p></li>
                     <li><p>Añade un constructor que reciba un parámetro <sc java>String</sc> para inicializar el campo <w>texto</w>.</p></li>
-                    <li><p>Añade otro constructor que reciba un <sc java>String</sc>, i dos <sc java>int</sc> para incializar los campos <w>ancho</w> y <w>alto</w>.</p></li>
+                    <li><p>Añade otro constructor que reciba un <sc java>String</sc>, y dos <sc java>int</sc> para incializar los campos <w>ancho</w> y <w>alto</w>.</p></li>
                     <li><p>Añade otro constructor que reciba dos <sc java>int</sc> para incializar los campos <w>ancho</w> y <w>alto</w>.</p></li>
                     <li><p>Añade tres métodos <em>setter</em> para establecer <w>texto</w>, <w>ancho</w> y <w>alto</w></p></li>
                     <li><p>Añade otro campo <em>setter</em> para establecer el <w>texto</w>, que además reciba un parámetro <sc java>boolean</sc>. 
