--- a/_materials/patterns/index.html
+++ b/_materials/patterns/index.html
@@ -5,6 +5,12 @@
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
 <nav></nav>
+<header>
+    <h1>Patrones de diseño</h1>
+    <abstract>
+  
+    </abstract>
+  </header>
 
 
 <section>
