--- a/daw/entorns/index.html
+++ b/daw/entorns/index.html
@@ -74,6 +74,10 @@ div.item {
             <div class="item">
                 <span>Gradle</span>
             </div>
+        </a><a href="/daw/entorns/patterns">
+            <div class="item">
+                <span>Patrones de diseño</span>
+            </div>
         </a>
     </div>
 </div>
