--- a/_materials/patterns/index.html
+++ b/_materials/patterns/index.html
@@ -98,6 +98,7 @@
     </observe>
 
     <work>
+        <h3>TextBox</h3>
         <p>Añade un Builder a la siguiente clase <w>TextBox</w>.</p>
         
         <p>El método <w>build()</w> debe asegurar que:</p>
@@ -317,7 +318,8 @@
     </observe>
 
     <work>
-        <p>Haz que la siguiente clase <w>Calculadora</w> devuelva el resultado (o el error) con un Callback:</p>
+        <h3>Calculadora</h3>
+        <p>Haz que la siguiente clase <w>Calculadora</w> devuelva resultados o errores con un Callback:</p>
 
         <sc java>
             class Calculadora {
@@ -346,6 +348,46 @@
             
                     int resultadoOtraDivision = Calculadora.divide(13, 0);
                     System.out.println("La division es: " + resultadoOtraDivision);
+                }
+            }
+        </sc>
+    </work>
+
+    <work>
+        <h3>SimuladorHipoteca</h3>
+        <p>Haz que la siguiente clase <w>Calculadora</w> retorne resultados o errores con un Callback:</p>
+
+        <sc java>
+            import java.net.URI;
+            import java.net.http.HttpClient;
+            import java.net.http.HttpRequest;
+            import java.net.http.HttpResponse;
+
+            class SimuladorHipoteca {
+                static double calcularCuota(double capital, double plazo) {
+                    // if (capital &lt;= 0) error: capital no valido
+                    // if (plazo &lt;= 0) error: plazo no valido
+
+                    double interes = 0;
+
+                    try {
+                        // obtener 'interes' del banco...
+                        interes = Double.parseDouble(HttpClient.newHttpClient().send(HttpRequest.newBuilder()
+                                .uri(URI.create("https://fakebank-tan.vercel.app/api/get-interest"))
+                                .GET().build(), HttpResponse.BodyHandlers.ofString()).body());
+                    } catch (Exception e) {
+                        // error obteniendo interes
+                    }
+
+                    return capital*interes/12/(1-Math.pow(1+(interes/12),-plazo*12));
+                }
+            }
+
+            public class Main {
+                public static void main(String[] args) {
+                    double cuota = SimuladorHipoteca.calcularCuota(2000, 2);
+
+                    System.out.println(cuota);
                 }
             }
         </sc>
@@ -468,4 +510,8 @@
             </low>
         </sc>
     </observe>
+</section>
+
+<section>
+    <h2>Listener / Observer</h2>
 </section>
