--- a/_materials/patterns/index.html
+++ b/_materials/patterns/index.html
@@ -355,7 +355,7 @@
 
     <work>
         <h3>SimuladorHipoteca</h3>
-        <p>Haz que la siguiente clase <w>Calculadora</w> retorne resultados o errores con un Callback:</p>
+        <p>Haz que la siguiente clase <w>SimuladorHipoteca</w> retorne resultados o errores con un Callback:</p>
 
         <sc java>
             import java.net.URI;
