--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -197,7 +197,7 @@
     </work>
 
     <work>
-        <h2>Calendario de exámenes</h2>
+        <h2>Ejercicio 4: Calendario de exámenes</h2>
         <p>Se desea hacer una aplicación para gestionar el calendario de exámenes de un instituto. La aplicación permitirá introducir y consultar las fechas 
             de los exámenes.
         </p>
