--- a/_materials/apps/index.html
+++ b/_materials/apps/index.html
@@ -1,4 +1,4 @@
-<!--meta {urls: [dam/m8/uf1], tags: [android]}-->
+<!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="module" src="/sofi/js/script.js"></script>
