--- a/dam/dades/index.html
+++ b/dam/dades/index.html
@@ -76,7 +76,7 @@ div.item {
             </div>
         </a><a href="/dam/dades/firebase2">
             <div class="item">
-                <span></span>
+                <span>firebase2</span>
             </div>
         </a>
     </div>
