--- a/dam/mobils/index.html
+++ b/dam/mobils/index.html
@@ -104,7 +104,7 @@ div.item {
             </div>
         </a><a href="/dam/mobils/cheat">
             <div class="item">
-                <span></span>
+                <span>cheat</span>
             </div>
         </a><a href="/dam/mobils/firebase">
             <div class="item">
