--- a/smx/web/index.html
+++ b/smx/web/index.html
@@ -88,7 +88,7 @@ div.item {
             </div>
         </a><a href="/smx/web/nextcloud">
             <div class="item">
-                <span></span>
+                <span>nextcloud</span>
             </div>
         </a><a href="/smx/web/inicihtml">
             <div class="item">
